working on email verication api
